Save latest changes